------------------------------------------------------------------------------------------------------------------------
 Fusion 2.000 - November 30th, 2005
------------------------------------------------------------------------------------------------------------------------
- 10-17-05: ADODB account data loading completed. [AlexKreuz]
- 10-16-05: Removed all ISCS components and functionality. [AlexKreuz]
- 10-16-05: Removed all JCon components and functionality. [AlexKreuz]
- 10-16-05: Cleaned up ghetto ass gui. [AlexKreuz]
- 10-16-05: Removed all sorts of form objects and clutter. [AlexKreuz]
- 10-16-05: Added WebBrowser component. [AlexKreuz]
- 10-16-05: Added links to Fusion Web Page, Documentation, IRC Chat, & Bugtracker. [AlexKreuz]
- 10-16-05: Added ADODB component. [AlexKreuz]
- 10-16-05: Added ADODB_LOAD_ACCOUNTS code. [AlexKreuz]






--------------------------------------------------------------------------------
 Fusion 1.214 - Sometime before we die
--------------------------------------------------------------------------------
- 02-18-05: Packet_db packet process framework complete. [Tsusai]
- 02-16-05: Fixed testing ini entry, added packet_db work. [Tsusai]
- 02-16-05: Updated charserver character deletion for 9 slot exe's. [Tsusai]
- 02-15-05: packet_db loading complete. [Tsusai]
- 02-05-05: Error proofed Default_Map and added framework for packet_db reading. [Tsusai]
- 02-04-05: fixed broadcast_handle and it's callers useage. [Tsusai]

--------------------------------------------------------------------------------
 Fusion 1.213 - January 28th, 2005
--------------------------------------------------------------------------------
- 01-25-05: Final preparation for 1.213 release. [AlexKreuz]
- 01-25-05: Gm Sprite Kill command errors if you don't have GM_KICK Power. [Tsusai]
- 01-24-05: Added GM Sprite's ability to kill things (Mob/NPC/Players). [Tsusai]
- 01-16-05: Fixed my mistake, only mobs (no npc/warp) loaded. [Tsusai]