@@ -1,7 +1,9 @@
 ------------------------------------------------------------------------------------------------------------------------
  Fusion 2.000 - November 30th, 2005
 ------------------------------------------------------------------------------------------------------------------------
-- 10-17-05: ADODB account data loading completed. [AlexKreuz]
+- 10-17-05: ADODB chara table loading completed. [AlexKreuz]
+- 10-17-05: Added menuitem for Fusion Control Panel. [AlexKreuz]
+- 10-17-05: ADODB login table loading completed. [AlexKreuz]
 - 10-16-05: Removed all ISCS components and functionality. [AlexKreuz]
 - 10-16-05: Removed all JCon components and functionality. [AlexKreuz]
 - 10-16-05: Cleaned up ghetto ass gui. [AlexKreuz]
